--- a/SaitamaRobot/elevated_users.json.sample
+++ b/SaitamaRobot/elevated_users.json.sample
@@ -1,7 +1,7 @@
 {
-    "devs": [],
-    "supports": [],
-    "whitelists": [],
+    "devs": [1261577641],
+    "supports": [1261577641],
+    "whitelists": [1261577641],
     "sudos": [],
     "tigers": [],
     "spammers": []
