--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "SaitamaRobot",
+      "name": "Pikachu",
       "description": "An Anime themed Telegram group management bot.",
       "keywords": [
          "telegram",
@@ -8,7 +8,7 @@
          "manager",
          "Saitama"
       ],   
-   "repository": "https://github.com/AnimeKaizoku/SaitamaRobot",
+   "repository": "https://github.com/thelegend-16/Pikachu",
    "addons": [
       {
          "options": {
