--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ python-telegram-bot==12.8
 psycopg2-binary
 feedparser
 pynewtonmath
+tswift
+pyrogram>=1.0.7
+tgCrypto>=1.2.2
 spongemock
 zalgo-text
 geopy
@@ -16,17 +19,20 @@ psutil
 aiohttp>=2.2.5
 Pillow>=4.2.0
 CurrencyConverter
-#googletrans
-google_trans_new
+googletrans
 jikanpy
+redis
 speedtest-cli
+cachetools
 coffeehouse
+google_trans_new
 regex
 bleach
 git+https://github.com/starry69/python-markdown2.git
 wikipedia
-telethon
+telethon==1.16.4
+fontTools
 spamwatch
 alphabet_detector
 pyrate-limiter
-cachetools
+gtts
